--- a/about.html
+++ b/about.html
@@ -10,15 +10,15 @@ title: About
             <img src="{{ site.baseurl }}/images/self.jpg">
           </div>
           <div class="col-md-9">
-            <h1>Herring Cove</h1>
-            <p><i class="fa fa-map-marker"></i>&nbsp;&nbsp;42°2'16"N   70°12'47"W</p>
-            <p><i class="fa fa-envelope-o"></i>&nbsp;rnpatel[at]me.com </p>
+            <h1>气味</h1>
+            <p><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Nanjing</p>
+            <p><i class="fa fa-envelope-o"></i>&nbsp;njycgqw@163.com </p>
             <hr />
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 letter">
-            <p>Hi, I'm Herring Cove, a theme for Jekyll from Massachusetts. You may also know me as a <a href="http://wikimapia.org/38526/Herring-Cove-Beach">beach on Cape Cod</a>.</p>
+            <p>气味，假装生活在人群中，又偏爱着孤独。</p>
           </div>
         </div>
     </div>
