--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: 气味小站
 
 {% if site.posts != empty %}
 <div class="recent-posts">
-  <h1>Recent Posts</h1>
+  <h1>最新动态：</h1>
   {% for post in site.posts limit: 3 %}
     {% if forloop.first %}
       {% assign add_class = 'most-recent' %}
@@ -18,7 +18,7 @@ title: 气味小站
       <li>
         <span>
           <h4>
-            <a href="{{ site.baseurl }}/{{ post.url }}">
+            <a href="{{ site.baseurl }}{{ post.url }}">
               {{ post.title }}
             </a>
             {{ fresh_tag }}
