--- a/links.html
+++ b/links.html
@@ -4,8 +4,8 @@ title: Links
   <div class="container">
 
     <div id="article">
-      <h1>Links</h1>
-      <p>I find a wide variety of things interesting and/or useful on the web. These are just some of them.</p>
+      <h1>链接</h1>
+      <p>这个主题的创建者说：他发现了一些网上很有用的链接，并且post在下面了。（以后我会慢慢把这些页面替换掉）</p>
       <br>
       <center>
       <a href="#fashion"><span class="label label-danger fashion-button">Fashion</span></a>
