--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@ title: About
           <div class="col-md-9">
             <h1>气味</h1>
             <p><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Nanjing</p>
-            <p><i class="fa fa-envelope-o"></i>&nbsp;njycgqw@163.com </p>
+            <p><i class="fa fa-envelope-o"></i>&nbsp;njycgqw@iCloud.com</p>
             <hr />
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 letter">
-            <p>气味，假装生活在人群中，又偏爱着孤独。</p>
+            <p>假装生活在人群中，又偏爱着孤独。</p>
           </div>
         </div>
     </div>
