update some styles

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: About
         </div>
         <div class="row">
           <div class="col-md-12 letter">
-            <p>假装生活在人群中，又偏爱着孤独。</p>
+            <p>最近想养一只阿柴！</p>
           </div>
         </div>
     </div>
