--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: 气味小站
     {% assign fresh_tag = '' %}
   {% endfor %}
   <ul>
-    <a href="{{ site.baseurl }}/list.html">View More...</a>
+    <a href="{{ site.baseurl }}/list.html">来康康更多的...</a>
   </ul>
 </div>
 {% endif %}
