--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,10 @@ title: Projects
   </div>
 
   <div class="project-container">
-    <h1>Projects</h1>
-    <p>Some interestingthings I've dabbled on.</p>
+    <h1>项目</h1>
+    <p>一些已经做完或正在进行的项目...</p>
     <br><center>
-    <a href="#"><span class="label label-danger">Photography</span></a>
+    <a href="#"><span class="label label-danger">摄影</span></a>
     <a href="#"><span class="label label-danger light">Coding</span></a></center>
   </div>
 
@@ -16,7 +16,7 @@ title: Projects
     <div class="project-box">
       <div class="row">
         <div class="col-md-3 project-image">
-          <img src="http://lorempixel.com/g/400/400/">
+          <img src="http://lorempixel.com/g/256/256/">
         </div>
         <div class="col-md-9 project-post">
           <h1>河海大学每日健康打卡</h1><h4>subheading</h4>
@@ -32,7 +32,7 @@ title: Projects
     <div class="project-box">
       <div class="row">
         <div class="col-md-3 project-image">
-          <img src="http://lorempixel.com/g/400/400/">
+          <img src="http://lorempixel.com/g/255/255/">
         </div>
         <div class="col-md-9 project-post">
           <h1>米哈游</h1><h4>subheading</h4>
@@ -48,7 +48,7 @@ title: Projects
     <div class="project-box">
       <div class="row">
         <div class="col-md-3 project-image">
-          <img src="http://lorempixel.com/g/400/400/">
+          <img src="http://lorempixel.com/g/254/254/">
         </div>
         <div class="col-md-9 project-post">
           <h1>Project Name</h1><h4>subheading</h4>
@@ -64,7 +64,7 @@ title: Projects
   <div class="project-box">
     <div class="row">
       <div class="col-md-3 project-image">
-        <img src="http://lorempixel.com/g/400/400/">
+        <img src="http://lorempixel.com/g/253/253/">
       </div>
       <div class="col-md-9 project-post">
         <h1>Project Name</h1><h4>subheading</h4>
